﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-06-25
	Fixed: Health Monitor was using free memory bytes as megabytes.
	Added: Basic DynDNS support test.
	Fixed: Some Audio debug was showing when it shouldn't and vice versa.
	Internal: Some behind the scenes tweaking.
### 2019-06-15
	Fixed: Error in process select dialog while scanning for existing processes.
### 2019-06-12
	Fixed: Advanced config could not be opened from tray context menu if main window was closed.
	Changed: Initialization should now be more reliable.
### 2019-06-10
	Added: Native Image generation experiment.
### 2019-06-05
	Changed: Exclusive mode was being a little eager.
	Changed: Ignore list is checked earlier for matches.
### 2019-06-03
	Added: Event log now has 3 icons to correspond to various messages to make it easier to notice warnings and errors.
	Updated: Third party licenses.
### 2019-06-02
	Internal: Logic changes, should have no end user effect.
### 2019-06-01
	Changed: Protected executables are now done so only if they're in %SystemRoot% or if the path is inaccessible.
### 2019-05-31
	Changed: Protected executables now also protect affinity by default.
### 2019-05-30
	Internal: Various tweakings to process triage, should be tiny bit faster. Something may have broken.
	Changed: No longer block logoff and accept dirty shutdown.
### 2019-05-27
	Changed: I/O priority disabled in expriment config for non-Win7.
### 2019-05-25
	Fixed: NIC traffic and error deltas and total errors were not being updated.
### 2019-05-23
	Added: Option to disable visual styling.
### 2019-05-22
	Fixed: Various issues related to audio service dying or audio devices being lost causing a crash or mass of errors.
### 2019-05-21
	Fixed: Bad I/O priority default.
### 2019-05-20
	Added: Preference order column added to watchlist.
### 2019-05-19