@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.13...]
+### 2019-06-26
+	Fixed: Link-local network addresses were reported as public ones.
 ### 2019-06-25
 	Fixed: Health Monitor was using free memory bytes as megabytes.
 	Added: Basic DynDNS support test.
